--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -96,7 +96,7 @@
                                         {% if request.user.is_superuser %}
                                         <span class="float-right">
                                             <a href="{% url 'edit_product' product.id %}" title="Update"><i class="fa-regular fa-pen-to-square"></i> </a>
-                                            <a href="{% url 'delete_product' product.id %}" title="Delete"><i class="fa-regular fa-trash-can"></i></a></span>
+                                            <a href="{% url 'delete_product' product.id %}" title="Delete" class="confirm-delete"><i class="fa-regular fa-trash-can"></i></a></span>
                                         {% endif %}
                                     </p>
 
@@ -114,4 +114,12 @@
 </section>
 <!-- product list part end-->
 
+{% endblock %}
+
+{% block postloadjs %}
+<script type="text/javascript">
+  $(document).on('click', '.confirm-delete', function(){
+    return confirm('Are you sure you want to delete the painting?');
+})
+</script>
 {% endblock %}
