--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -31,7 +31,13 @@
         <div class="col-12 col-lg-6 order-lg-last mb-5">
             <form action="{% url 'edit_product' product.id %}" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
-                {{ form|crispy }}
+                {% for field in form %}
+                    {% if field.name != 'image' %}
+                        {{ field | as_crispy_field }}
+                    {% else %}
+                        {{ field }}
+                    {% endif %}
+                {% endfor %}
                 <div class="text-right">
                     <a class="btn_1" href="{% url 'products' %}">Cancel</a>
                     <button class="btn_1" type="submit">Update Painting</button>
@@ -45,3 +51,12 @@
 
 {% endblock %}
 
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript">
+        $('#new-image').change(function() {
+            var file = $('#new-image')[0].files[0];
+            $('#filename').text(`Image will be set to: ${file.name}`);
+        });
+    </script>
+{% endblock %}
