Correct delivery cost display error

--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -74,7 +74,7 @@
             </div>
             <div class="col-3">
               <p class="my-0">€{{ order.order_total | floatformat:2 }}</p>
-              <p class="my-0">€{{ delivery }}</p>
+              <p class="my-0">€{{ order.delivery }}</p>
               <p class="my-0"><strong>€{{ order.grand_total | floatformat:2 }}</strong></p>
             </div>
           </div>
