--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,16 +10,16 @@
                     <div class="banner_text">
                         <div class="banner_text_iner">
                             <h1>Hanneles Original Art</h1>
-                            <p>Why put tasteless prints on your wall
-                            when you can get original paintings?</p>
-                            <a href="{% url 'products' %}" class="btn_1">Buy real art here!</a>
+                            <p>Don't buy commodity prints
+                            when you can have original paintings!</p>
+                            <a href="{% url 'products' %}" class="btn_1">Buy real art</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="banner_img">
-            <img src="media/sommar.jpg" alt="#" class="img-fluid">
+            <img src="{% static 'img/banner.png' %}" alt="#" class="img-fluid">
             <img src="{% static 'img/banner_pattern.png' %}" alt="#" class="pattern_img img-fluid">
         </div>
     </section>
@@ -31,8 +31,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="subscribe_part_content">
-                        <h2>Get prompt information when new paintings are added!</h2>
-                        <p>Subscribe to our newsletter!</p>
+                        <h2>Subscribe to our newsletter</h2>
+                        <p>To get first hand information about new arrivals!</p>
                         <div class="subscribe_form">
                             <input type="email" placeholder="Enter your mail">
                             <a href="#" class="btn_1">Subscribe</a>
@@ -43,53 +43,43 @@
         </div>
     </section>
     <!-- subscribe part end -->
-
-    <!--::footer_part start::-->
-    <footer class="footer_part">
-        <div class="footer_iner">
-            <div class="container">
-                <div class="row justify-content-between align-items-center">
-                    <div class="col-lg-8">
-                        <div class="footer_menu">
-                            <div class="footer_logo">
-                                <a href="#"><img src="static/img/logo.png" alt="#"></a>
-                            </div>
-                            <div class="footer_menu_item">
-                                <a href="#">Home</a>
-                                <a href="#">About</a>
-                            </div>
+        <!--::footer_part start::-->
+        <footer class="footer_part">
+            <div class="footer_iner">
+                <div class="container">
+                    <div class="row justify-content-between align-items-center">
+                        <div class="col-lg-8">
+    
                         </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="social_icon">
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-instagram"></i></a>
-                            <a href="#"><i class="fab fa-google-plus-g"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        
-        <div class="copyright_part">
-            <div class="container">
-                <div class="row ">
-                    <div class="col-lg-12">
-                        <div class="copyright_text">
-                            <P><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></P>
-                            <div class="copyright_link">
-                                <a href="#">Privacy Policy</a>
-                                <a href="#">FAQ</a>
+                        <div class="col-lg-4">
+                            <div class="social_icon">
+                                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a href="#"><i class="fab fa-instagram"></i></a>
+                                <a href="#"><i class="fab fa-google-plus-g"></i></a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </footer>
-    <!--::footer_part end::-->
-
-
+            
+            <div class="copyright_part">
+                <div class="container">
+                    <div class="row ">
+                        <div class="col-lg-12">
+                            <div class="copyright_text">
+                                <P><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></P>
+                                <div class="copyright_link">
+                                    <a href="#">Privacy Policy</a>
+                                    <a href="#">FAQ</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <!--::footer_part end::-->
 {% endblock %}
+
