--- a/static/css/base.css
+++ b/static/css/base.css
@@ -140,3 +140,36 @@ hr {
     border-color: #dc3545;
     border-radius: 0;
 }
+
+
+/* Navbar remove border */
+.navbar lg {
+    border: 0 !important;
+    z-index: 9999;
+    background-color: #fff;
+}
+
+.nav-link {
+    color: #795376 !important;
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+    /* line 79, /Applications/MAMP/htdocs/old/palash/cl/shop_html/sass/_banner.scss */
+    .banner_part .banner_img {
+      max-width: 55%;
+      max-height: 420px;
+      top: auto;
+      bottom: 0;
+      z-index: -1;
+    }
+  }
+
+@media only screen and (max-width: 350px) {
+    .show-total {
+        display: none;
+    }
+
+    .nav-link {
+        padding: 0.5rem 0.5rem;
+    }
+}
