--- a/templates/base.html
+++ b/templates/base.html
@@ -59,14 +59,11 @@
 
     {% block extra_js %}
     {% endblock %}
-
-    
+ 
     <title>Hanneles Art Gallery & Academy</title>
-
-</head>
-
+</head> 
 <body>
-    <!--::header part start::-->
+    <!--Header and Navigation start-->
     <header class="main_menu home_menu">
         <div class="container">
             <div class="row align-items-center justify-content-center">
@@ -80,7 +77,6 @@
                             aria-expanded="false" aria-label="Toggle navigation">
                             <span class="menu_icon"><i class="fas fa-bars"></i></span>
                         </button>
-
                         <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
@@ -96,8 +92,6 @@
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
                                         <a class="dropdown-item" href="{% url 'products' %}">All Paintings</a>
-                                        <a class="dropdown-item" href="">Categories</a>
-                                        
                                     </div>
                                 </li>
                                 <li class="nav-item dropdown">
@@ -116,24 +110,27 @@
                                         <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
                                         <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
                                     {% endif %}
-
                                     </div>
                                 </li>
-
                             </ul>
-                        </div>                        <div class="hearer_icon d-flex align-items-center">
+                        </div>                        
+                        <div class="hearer_icon d-flex align-items-center">
                             <span>
                                 <a id="search_1" href="javascript:void(0)"><i class="ti-search"></i></a>
                             </span>
                             <span>
-                            <a class="{% if grand_total %}text-info {% else %}text-black{% endif %} nav-link" href="{% url 'view_cart' %}">
+                            <a class="text-info text-black nav-link" href="{% url 'view_cart' %}">
                                 <i class="flaticon-shopping-cart-black-shape cart-sum"> 
+                                </i>
+                            </a>
+                        </span>
+                        <span class="show-total">
+                            <a class="{% if grand_total %}text-info {% else %}text-black{% endif %} nav-link" href="{% url 'view_cart' %}">
                                     {% if grand_total %}
                                         €{{ grand_total|floatformat:2 }}
                                     {% else %}
                                         €0.00
                                     {% endif %}
-                                </i>
                             </a>
                         </span>
                         </div>
@@ -151,8 +148,8 @@
             </div>
         </div>
     </header>
-    <!-- Header part end-->
-
+    <!--Header and Navigation end-->
+    <!--Messages start-->
     {% if messages %}
         <div class="message-container">
             {% for message in messages %}
@@ -170,6 +167,7 @@
             {% endfor %}
         </div>
     {% endif %}
+    <!--Messages end-->
 
     {% block page_header %}
     {% endblock %}
@@ -209,7 +207,6 @@
             <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/jquery.counterup@2.1.0/jquery.counterup.min.js"></script>`
     {% endblock %}
-
 </body>
 </html>
     
