--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -23,7 +23,7 @@
       <div class="product_img_slide owl-carousel">
         <div class="single_product_img">
           {% if product.image %}
-          <img src="{{ product.image.url }}" alt="{{ product.name }} {{ product.technique }}" class="img-fluid">
+          <a href="{{ product.image.url }}"> <img src="{{ product.image.url }}" target="_blank" alt="{{ product.name }} {{ product.technique }}" class="img-fluid"></a>
           {% else %}
           <img src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }} {{ product.technique }}" class="img-fluid">
           {% endif %}
