Add Mailchimp newsletter subscription form

--- a/templates/base.html
+++ b/templates/base.html
@@ -197,11 +197,11 @@
             <script src="{% static 'js/slick.min.js' %}"></script>
             <script src="{% static 'js/jquery.counterup.min.js' %}"></script>
             <script src="{% static 'js/waypoints.min.js' %}"></script>
-            <script src="{% static 'js/contact.js' %}"></script>
-            <script src="{% static 'js/jquery.ajaxchimp.min.js' %}"></script>
+            <!-- <script src="{% static 'js/contact.js' %}"></script>
+            <script src="{% static 'js/jquery.ajaxchimp.min.js' %}"></script> -->
             <script src="{% static 'js/jquery.form.js' %}"></script>
             <script src="{% static 'js/jquery.validate.min.js' %}"></script>
-            <script src="{% static 'js/mail-script.js' %}"></script>
+            <!-- <script src="{% static 'js/mail-script.js' %}"></script> -->
             <!-- custom js -->
             <script src="{% static 'js/custom.js' %}"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
