--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -25,17 +25,57 @@
     </section>
     <!-- banner part start-->
 
+
     <!-- subscribe part here -->
     <section class="subscribe_part section_padding">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="subscribe_part_content">
-                        <h2>Subscribe to our newsletter</h2>
-                        <p>To get first hand information about new arrivals!</p>
-                        <div class="subscribe_form">
-                            <input type="email" placeholder="Enter your mail">
-                            <a href="#" class="btn_1">Subscribe</a>
+                        <div id="mc_embed_shell">
+                            <div id="mc_embed_signup">
+                                <div class="subscribe_form">
+                                    <h2>Subscribe to our Newsletter!</h2>
+                                    <form
+                                        action="https://herokuapp.us21.list-manage.com/subscribe/post?u=88090f70b333bca43697bfe49&amp;id=70e54690fe&amp;f_id=0012f2e6f0"
+                                        method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
+                                        class="validate" target="_blank">
+                                        <div id="mc_embed_signup_scroll">
+                                            <div class="mc-field-group">
+                                                <input type="email" name="EMAIL" class="required email" id="mce-EMAIL"
+                                                    required="" value="" placeholder="Enter your mail"></div>
+                                            <div id="mce-responses" class="clear foot">
+                                                <div class="response" id="mce-error-response" style="display: none;">
+                                                </div>
+                                                <div class="response" id="mce-success-response" style="display: none;">
+                                                </div>
+                                            </div>
+                                            <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                                                /* real people should not fill this in and expect good things - do not
+                                                remove this or risk form bot signups */
+                                                <input type="text" name="b_88090f70b333bca43697bfe49_70e54690fe"
+                                                    tabindex="-1" value="">
+                                            </div>
+                                            <div class="optionalParent">
+                                                <div class="clear foot">
+                                                    <input type="submit" name="subscribe" id="mc-embedded-subscribe"
+                                                        class="button" value="Subscribe">
+                                                   <p>Powered by:</p>
+                                                        <p style="margin: 0px auto;"><a href="http://eepurl.com/iIUFVE"
+                                                            title="Mailchimp - email marketing made easy and fun">
+                                                            <span
+                                                                style="display: inline-block; background-color: transparent; border-radius: 4px;">
+                                                                <img class="refferal_badge"
+                                                                    src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-light.svg"
+                                                                    alt="Intuit Mailchimp"
+                                                                    style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;"></span></a>
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -43,43 +83,38 @@
         </div>
     </section>
     <!-- subscribe part end -->
-        <!--::footer_part start::-->
-        <footer class="footer_part">
-            <div class="footer_iner">
-                <div class="container">
-                    <div class="row justify-content-between align-items-center">
-                        <div class="col-lg-8">
-    
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="social_icon">
-                                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a href="#"><i class="fab fa-instagram"></i></a>
-                                <a href="#"><i class="fab fa-google-plus-g"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="copyright_part">
-                <div class="container">
-                    <div class="row ">
-                        <div class="col-lg-12">
-                            <div class="copyright_text">
-                                <P><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></P>
-                                <div class="copyright_link">
-                                    <a href="#">Privacy Policy</a>
-                                    <a href="#">FAQ</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </footer>
-        <!--::footer_part end::-->
-{% endblock %}
 
+    <!--::footer_part start::-->
+    <footer class="footer_part">
+        <div class="footer_iner">
+            <div class="container">
+
+            </div>
+        </div>
+        
+        <div class="copyright_part">
+            <div class="container">
+                <div class="row ">
+                    <div class="col-lg-12">
+                        <div class="copyright_text">
+                            <P><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></P>
+                            <div class="copyright_link">
+                                <a href="#">Privacy Policy</a>
+                                <a href="#">FAQ</a>
+                                <a href="#"><i class="fab fa-facebook"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!--::footer_part end::-->
+{% endblock %}
+{% block mailchimpjs %}
+<script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
+<script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script></div>
+  
+{% endblock %}
