--- a/static/css/base.css
+++ b/static/css/base.css
@@ -59,8 +59,7 @@ hr {
 }
 
 /* Add mouse pointer to category & format dropdown lists and refresh/delete icons in cart */
-.update-link,
-.remove-item,
+
 .pointer {
     cursor: pointer;
 }
@@ -153,16 +152,6 @@ hr {
     color: #795376 !important;
 }
 
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
-    /* line 79, /Applications/MAMP/htdocs/old/palash/cl/shop_html/sass/_banner.scss */
-    .banner_part .banner_img {
-      max-width: 55%;
-      max-height: 420px;
-      top: auto;
-      bottom: 0;
-      z-index: -1;
-    }
-  }
 
 @media only screen and (max-width: 350px) {
     .show-total {
@@ -171,5 +160,27 @@ hr {
 
     .nav-link {
         padding: 0.5rem 0.5rem;
+    }
+}
+
+#mc-embedded-subscribe {
+ 
+    display: inline-block;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    max-width: fit-content;
+    padding: 17px 50px;
+    border-radius: 50px;
+    background-color: #B08EAD;
+    border: 0;
+    font-size: 15px;
+    font-weight: 500;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    text-transform: capitalize;
+    color: #fff;
+    &:hover{
+        background-color: #fff;
+        color: #795376;
     }
 }
