Add hover effect and text to delete and edit icons on product and cart pages

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -54,7 +54,8 @@
               <div class="product_count">
                 <div class="quantity-remove">
                 <a class="quantity" name="quantity" aria-label="Quantity" id="quantity">{{ item.quantity }}</a>
-                <a class="remove-item" title="Remove item" aria-label="Remove" id="remove_{{ item.item_id }}"><i class="fa-solid fa-trash"></i></a>
+                <a class="remove-item" aria-label="Remove" id="remove_{{ item.item_id }}"><i class="fa-solid fa-trash click-text"></i>
+                <div class="hide">Remove item</div></a>
                 </div>
               </div>
             </td>
