--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -101,9 +101,8 @@
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></P>
                             <div class="copyright_link">
-                                <a href="#">Privacy Policy</a>
-                                <a href="#">FAQ</a>
-                                <a href="#"><i class="fab fa-facebook"></i></a>
+                                <a href="{% url 'privacy_policy' %}" target="_blank">Privacy Policy</a>
+                                <a href="https://www.facebook.com/61555624246656/" target="_blank"><i class="fab fa-facebook"></i></a>
                             </div>
                         </div>
                     </div>
