--- a/static/css/base.css
+++ b/static/css/base.css
@@ -86,7 +86,7 @@ hr {
     font-size: 16px;
 }
 .toast-border {
-    border-radius: 20px;
+    border-radius: 50px;
     border: 2px solid #795376;
 }
 
@@ -184,3 +184,55 @@ hr {
         color: #795376;
     }
 }
+
+
+.container .box_1170 > p {
+    font-family: "Rubik", sans-serif;
+    line-height: 2;
+    font-size: 15px;
+    margin-bottom: 0px;
+    color: #795376;
+    font-weight: 400;
+}
+
+
+.container .box_1170 > h1, h2, h3, h4, h5, h6 {
+    color: #4B3049;
+    font-family: "Poppins", sans-serif;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    margin-bottom: 0.5rem;
+}
+
+.typography h3 {
+    margin-bottom: 0.7rem;
+    margin-top: 0.7rem;
+}
+
+.typography h4, h5 {
+    margin-bottom: 0.5rem;
+    margin-top: 0.5rem;
+}
+
+.typography strong {
+    color: #828bb2;
+}
+
+.typography a {
+    color: #707070;
+    text-decoration: underline;
+}
+
+.typography h5 {
+    padding-left: 10px;
+}
+
+.hide {
+    display: none;
+    font-size: 0.75rem;
+  }
+      
+  .click-text:hover + .hide {
+    display: block;
+    color: #B08EAD;
+  }
