Fixed Javascript issue for dropdown select boxes

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -49,13 +49,13 @@
             </td>
             <td>
               <h5>€ {{ item.product.price }}</h5>
-            </td>_
+            </td>
             <td class="column_centered">
               <div class="product_count">
                 <div class="quantity-remove">
                 <a class="quantity" name="quantity" aria-label="Quantity" id="quantity">{{ item.quantity }}</a>
-                <a class="remove-item" aria-label="Remove" id="remove_{{ item.item_id }}"><i class="fa-solid fa-trash click-text"></i>
-                <div class="hide">Remove item</div></a>
+                <a class="remove-item" aria-label="Remove" id="remove_{{ item.item_id }}"><i class="fa-solid fa-trash descriptive_text"></i>
+                <div class="description_hide">Remove item</div></a>
                 </div>
               </div>
             </td>
