Removed 'nice-select' JS script from global js folder to avoid messy country dropdown on checkout page

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -101,6 +101,7 @@
     
     {% else %}
         <p><h6>Your shopping cart is empty.</h6></p>
+        <a href="{% url 'products' %}" class="btn_1">Buy real art</a>
         
     {% endif %}
 
