--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -127,7 +127,7 @@
         {% if from_profile %}
         <a class="btn_1" href="{% url 'profile' %}">Back to Profile</a>
         {% else %}
-        <a class="btn_1" href="{% url 'products' %}">Back to the Art Gallery</a>
+        <a class="btn_1" href="{% url 'products' %}">Back to Gallery</a>
         {% endif %}
       </div>
     </div>
