--- a/templates/base.html
+++ b/templates/base.html
@@ -197,8 +197,8 @@
             <script src="{% static 'js/slick.min.js' %}"></script>
             <script src="{% static 'js/jquery.counterup.min.js' %}"></script>
             <script src="{% static 'js/waypoints.min.js' %}"></script>
-            <!-- <script src="{% static 'js/contact.js' %}"></script>
-            <script src="{% static 'js/jquery.ajaxchimp.min.js' %}"></script> -->
+            <!-- <script src="{% static 'js/contact.js' %}"></script> -->
+            <script src="{% static 'js/jquery.ajaxchimp.min.js' %}"></script>
             <script src="{% static 'js/jquery.form.js' %}"></script>
             <script src="{% static 'js/jquery.validate.min.js' %}"></script>
             <!-- <script src="{% static 'js/mail-script.js' %}"></script> -->
