--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -127,3 +127,7 @@
         })
         </script>
 {% endblock %}
+
+{% block niceselectjs %}
+<script src="{% static 'products/js/jquery.nice-select.min.js' %}"></script>
+{% endblock %}
