--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,118 +2,145 @@
 {% load static %}
 
 {% block content %}
-    <!-- banner part start-->
-    <section class="banner_part">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-md-5">
-                    <div class="banner_text">
-                        <div class="banner_text_iner">
-                            <h1>Hanneles Original Art</h1>
-                            <p>Don't buy commodity prints
+<!-- banner part start-->
+<section class="banner_part">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-md-5">
+                <div class="banner_text">
+                    <div class="banner_text_iner">
+                        <h1>Hanneles Original Art</h1>
+                        <p>Don't buy commodity prints
                             when you can have original paintings!</p>
-                            <a href="{% url 'products' %}" class="btn_1">Buy real art</a>
-                        </div>
+                        <a href="{% url 'products' %}" class="btn_1">Buy real art</a>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="banner_img">
-            <img src="{% static 'img/banner.png' %}" alt="#" class="img-fluid">
-            <img src="{% static 'img/banner_pattern.png' %}" alt="#" class="pattern_img img-fluid">
-        </div>
-    </section>
-    <!-- banner part start-->
+    </div>
+    <div class="banner_img">
+        <img src="{% static 'img/banner.png' %}" alt="#" class="img-fluid">
+        <img src="{% static 'img/banner_pattern.png' %}" alt="#" class="pattern_img img-fluid">
+    </div>
+</section>
+<!-- banner part start-->
 
 
-    <!-- subscribe part here -->
-    <section class="subscribe_part section_padding">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-8">
-                    <div class="subscribe_part_content">
-                        <div id="mc_embed_shell">
-                            <div id="mc_embed_signup">
-                                <div class="subscribe_form">
-                                    <h2>Subscribe to our Newsletter!</h2>
-                                    <form
-                                        action="https://herokuapp.us21.list-manage.com/subscribe/post?u=88090f70b333bca43697bfe49&amp;id=70e54690fe&amp;f_id=0012f2e6f0"
-                                        method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
-                                        class="validate" target="_blank">
-                                        <div id="mc_embed_signup_scroll">
-                                            <div class="mc-field-group">
-                                                <input type="email" name="EMAIL" class="required email" id="mce-EMAIL"
-                                                    required="" value="" placeholder="Enter your mail"></div>
-                                            <div id="mce-responses" class="clear foot">
-                                                <div class="response" id="mce-error-response" style="display: none;">
-                                                </div>
-                                                <div class="response" id="mce-success-response" style="display: none;">
-                                                </div>
+<!-- subscribe part here -->
+<section class="subscribe_part section_padding">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
+                <div class="subscribe_part_content">
+                    <div id="mc_embed_shell">
+                        <div id="mc_embed_signup">
+                            <div class="subscribe_form">
+                                <h2>Subscribe to our Newsletter!</h2>
+                                <form
+                                    action="https://herokuapp.us21.list-manage.com/subscribe/post?u=88090f70b333bca43697bfe49&amp;id=70e54690fe&amp;f_id=0012f2e6f0"
+                                    method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
+                                    class="validate" target="_blank">
+                                    <div id="mc_embed_signup_scroll">
+                                        <div class="mc-field-group">
+                                            <input type="email" name="EMAIL" class="required email" id="mce-EMAIL"
+                                                required="" value="" placeholder="Enter your mail"></div>
+                                        <div id="mce-responses" class="clear foot">
+                                            <div class="response" id="mce-error-response" style="display: none;">
                                             </div>
-                                            <div aria-hidden="true" style="position: absolute; left: -5000px;">
-                                                /* real people should not fill this in and expect good things - do not
-                                                remove this or risk form bot signups */
-                                                <input type="text" name="b_88090f70b333bca43697bfe49_70e54690fe"
-                                                    tabindex="-1" value="">
-                                            </div>
-                                            <div class="optionalParent">
-                                                <div class="clear foot">
-                                                    <input type="submit" name="subscribe" id="mc-embedded-subscribe"
-                                                        class="button" value="Subscribe">
-                                                   <p>Powered by:</p>
-                                                        <p style="margin: 0px auto;"><a href="http://eepurl.com/iIUFVE"
-                                                            title="Mailchimp - email marketing made easy and fun">
-                                                            <span
-                                                                style="display: inline-block; background-color: transparent; border-radius: 4px;">
-                                                                <img class="refferal_badge"
-                                                                    src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-light.svg"
-                                                                    alt="Intuit Mailchimp"
-                                                                    style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;"></span></a>
-                                                    </p>
-                                                </div>
+                                            <div class="response" id="mce-success-response" style="display: none;">
                                             </div>
                                         </div>
-                                    </form>
-                                </div>
+                                        <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                                            /* real people should not fill this in and expect good things - do not
+                                            remove this or risk form bot signups */
+                                            <input type="text" name="b_88090f70b333bca43697bfe49_70e54690fe"
+                                                tabindex="-1" value="">
+                                        </div>
+                                        <div class="optionalParent">
+                                            <div class="clear foot">
+                                                <input type="submit" name="subscribe" id="mc-embedded-subscribe"
+                                                    class="button" value="Subscribe">
+                                                <p>Powered by:</p>
+                                                <p style="margin: 0px auto;"><a href="http://eepurl.com/iIUFVE"
+                                                        title="Mailchimp - email marketing made easy and fun">
+                                                        <span
+                                                            style="display: inline-block; background-color: transparent; border-radius: 4px;">
+                                                            <img class="refferal_badge"
+                                                                src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-light.svg"
+                                                                alt="Intuit Mailchimp"
+                                                                style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;"></span></a>
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-    <!-- subscribe part end -->
+    </div>
+</section>
+<!-- subscribe part end -->
 
-    <!--::footer_part start::-->
-    <footer class="footer_part">
-        <div class="footer_iner">
-            <div class="container">
+<!--::footer_part start::-->
+<footer class="footer_part">
+    <div class="footer_iner">
+        <div class="container">
 
-            </div>
         </div>
-        
-        <div class="copyright_part">
-            <div class="container">
-                <div class="row ">
-                    <div class="col-lg-12">
-                        <div class="copyright_text">
-                            <P><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></P>
-                            <div class="copyright_link">
-                                <a href="{% url 'privacy_policy' %}" target="_blank">Privacy Policy</a>
-                                <a href="https://www.facebook.com/61555624246656/" target="_blank"><i class="fab fa-facebook"></i></a>
-                            </div>
+    </div>
+
+    <div class="copyright_part">
+        <div class="container">
+            <div class="row ">
+                <div class="col-lg-12">
+                    <div class="copyright_text">
+                        <P>
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            Copyright &copy;<script>
+                                document.write(new Date().getFullYear());
+                            </script> All rights reserved | This template is made with <i class="ti-heart"
+                                aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                        </P>
+                        <div class="copyright_link">
+                            <a href="{% url 'privacy_policy' %}" target="_blank">Privacy Policy</a>
+                            <a href="https://www.facebook.com/61555624246656/" target="_blank"><i
+                                    class="fab fa-facebook"></i></a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </footer>
-    <!--::footer_part end::-->
+    </div>
+</footer>
+<!--::footer_part end::-->
 {% endblock %}
 {% block mailchimpjs %}
 <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
-<script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script></div>
-  
+<script type="text/javascript">
+    (function ($) {
+        window.fnames = new Array();
+        window.ftypes = new Array();
+        fnames[0] = 'EMAIL';
+        ftypes[0] = 'email';
+        fnames[1] = 'FNAME';
+        ftypes[1] = 'text';
+        fnames[2] = 'LNAME';
+        ftypes[2] = 'text';
+        fnames[3] = 'ADDRESS';
+        ftypes[3] = 'address';
+        fnames[4] = 'PHONE';
+        ftypes[4] = 'phone';
+        fnames[5] = 'BIRTHDAY';
+        ftypes[5] = 'birthday';
+    }(jQuery));
+    var $mcj = jQuery.noConflict(true);
+</script>
+</div>
+{% endblock %}
+{% block niceselectjs %}
+<script src="{% static 'home/js/jquery.nice-select.min.js' %}"></script>
 {% endblock %}
