--- a/templates/base.html
+++ b/templates/base.html
@@ -20,11 +20,15 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.6.0/materia/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Finger+Paint&display=swap" rel="stylesheet">
     <link rel="icon" href="{% static 'img/favicon.png' %}">
-    
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <!-- animate CSS -->
+    {% endblock %}
+
+    {% block extra_css %}
+    <!-- Pillowmart Bootstrap CSS -->
     <link rel="stylesheet" href="{% static 'css/animate.css' %}">
     <!-- owl carousel CSS -->
     <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
@@ -39,19 +43,14 @@
     <link rel="stylesheet" href="{% static 'css/slick.css' %}">
     <!-- style CSS -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <!-- base CSS -->
-    <link rel="stylesheet" href="{% static 'css/base.css' %}">
-    {% endblock %}
-
-    {% block extra_css %}
     {% endblock %}
     
     {% block corejs %}    
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" 
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
+    <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/aec9602b9e.js" crossorigin="anonymous"></script>
     <!-- Stripe -->
     <script src="https://js.stripe.com/v3/"></script>
@@ -63,7 +62,7 @@
     <title>Hanneles Art Gallery & Academy</title>
 </head> 
 <body>
-    <!--Header and Navigation start-->
+<!-- Navigation start-->
     <header class="main_menu home_menu">
         <div class="container">
             <div class="row align-items-center justify-content-center">
@@ -73,66 +72,84 @@
                             <img src="{% static 'img/logo.png' %}" alt="logo">
                         </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
-                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="menu_icon"><i class="fas fa-bars"></i></span>
+                            data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
                         </button>
-                        <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
+                        <div class="collapse navbar-collapse main-menu-item" id="navbarNavDropdown">
                             <ul class="navbar-nav">
-                                <li class="nav-item">
+                                <li class="nav-item active">
                                     <a class="nav-link" href="{% url 'home' %}">Home</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="">about</a>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="{% url 'products' %}" id="navbarDropdown_1"
-                                        role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <a class="nav-link dropdown-toggle" href=""
+                                        id="navbarDropdown_3" role="button" data-toggle="dropdown" aria-haspopup="true"
+                                        aria-expanded="false">
                                         Art Gallery
                                     </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
-                                        <a class="dropdown-item" href="{% url 'products' %}">All Paintings</a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
+                                        <a class="dropdown-item" href="{% url 'products' %}"><strong>All
+                                                Paintings</strong></a>
+                                        <div class="dropdown-divider"></div>
+                                        <a class="dropdown-item"
+                                            href="{% url 'products' %}?category=flowers">Flowers</a>
+                                        <a class="dropdown-item"
+                                            href="{% url 'products' %}?category=animals">Animals</a>
+                                        <a class="dropdown-item"
+                                            href="{% url 'products' %}?category=landscape">Landscape</a>
+                                        <a class="dropdown-item"
+                                            href="{% url 'products' %}?category=portrait">Portrait</a>
+                                        <a class="dropdown-item"
+                                            href="{% url 'products' %}?category=abstract">Abstract</a>
+                                        <a class="dropdown-item"
+                                            href="{% url 'products' %}?category=impressionism">Impressionism</a>
+                                        <a class="dropdown-item" href="{% url 'products' %}?category=still_life">Still
+                                            Life</a>
                                     </div>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="" id="navbarDropdown_3"
-                                        role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <a class="nav-link dropdown-toggle" href="" id="navbarDropdown_3" role="button"
+                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         My Account
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
                                         {% if request.user.is_authenticated %}
                                         {% if request.user.is_superuser %}
-                                            <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
+                                        <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
                                         {% endif %}
                                         <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
                                         <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-                                    {% else %}
+                                        {% else %}
                                         <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
                                         <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
-                                    {% endif %}
+                                        {% endif %}
                                     </div>
                                 </li>
                             </ul>
-                        </div>                        
+                        </div>
                         <div class="hearer_icon d-flex align-items-center">
                             <span>
                                 <a id="search_1" href="javascript:void(0)"><i class="ti-search"></i></a>
                             </span>
                             <span>
-                            <a class="text-info text-black nav-link" href="{% url 'view_cart' %}">
-                                <i class="flaticon-shopping-cart-black-shape cart-sum"> 
-                                </i>
-                            </a>
-                        </span>
-                        <span class="show-total">
-                            <a class="{% if grand_total %}text-info {% else %}text-black{% endif %} nav-link" href="{% url 'view_cart' %}">
+                                <a class="text-info text-black nav-link" href="{% url 'view_cart' %}">
+                                    <i class="flaticon-shopping-cart-black-shape cart-sum">
+                                    </i>
+                                </a>
+                            </span>
+                            <span class="show-total">
+                                <a class="{% if grand_total %}text-info {% else %}text-black{% endif %} nav-link"
+                                    href="{% url 'view_cart' %}">
                                     {% if grand_total %}
-                                        €{{ grand_total|floatformat:2 }}
+                                    €{{ grand_total|floatformat:2 }}
                                     {% else %}
-                                        €0.00
+                                    €0.00
                                     {% endif %}
-                            </a>
-                        </span>
+                                </a>
+                            </span>
                         </div>
                     </nav>
                 </div>
@@ -141,15 +158,17 @@
         <div class="search_input" id="search_input_box">
             <div class="container ">
                 <form class="d-flex justify-content-between search-inner" method="GET" action="{% url 'products' %}">
-                    <input type="text" class="form-control" id="search_input" name="q" placeholder="Enter Search Words Here">
+                    <input type="text" class="form-control" id="search_input" name="q"
+                        placeholder="Enter Search Words Here">
                     <button type="submit" class="btn"></button>
                     <span class="ti-close" id="close_search" title="Close Search"></span>
                 </form>
             </div>
         </div>
     </header>
-    <!--Header and Navigation end-->
-    <!--Messages start-->
+<!--Navigation end-->
+
+<!--Messages start-->
     {% if messages %}
         <div class="message-container">
             {% for message in messages %}
@@ -167,7 +186,7 @@
             {% endfor %}
         </div>
     {% endif %}
-    <!--Messages end-->
+<!--Messages end-->
 
     {% block page_header %}
     {% endblock %}
@@ -182,32 +201,31 @@
     {% endblock %}
 
     {% block jquery_template %}
-            <!-- jquery plugins here-->
-            <script src="{% static 'js/jquery-1.12.1.min.js' %}"></script>
-            <!-- popper js -->
-            <script src="{% static 'js/popper.min.js' %}"></script>
-            <!-- bootstrap js -->
-            <script src="{% static 'js/bootstrap.min.js' %}"></script>
-            <!-- magnific popup js -->
-            <script src="{% static 'js/jquery.magnific-popup.js' %}"></script>
-            <!-- carousel js -->
-            <script src="{% static 'js/owl.carousel.min.js' %}"></script>
-            <!-- <script src="{% static 'js/jquery.nice-select.min.js' %}"></script> -->
-            <!-- slick js -->
-            <script src="{% static 'js/slick.min.js' %}"></script>
-            <script src="{% static 'js/jquery.counterup.min.js' %}"></script>
-            <script src="{% static 'js/waypoints.min.js' %}"></script>
-            <!-- <script src="{% static 'js/contact.js' %}"></script> -->
-            <!-- <script src="{% static 'js/jquery.ajaxchimp.min.js' %}"></script> -->
-            <script src="{% static 'js/jquery.form.js' %}"></script>
-            <script src="{% static 'js/jquery.validate.min.js' %}"></script>
-            <!-- <script src="{% static 'js/mail-script.js' %}"></script> -->
-            <!-- custom js -->
-            <script src="{% static 'js/custom.js' %}"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
-            <script src="https://cdn.jsdelivr.net/npm/jquery.counterup@2.1.0/jquery.counterup.min.js"></script>`
+    <!-- jquery plugins here-->
+    <script src="{% static 'js/bootstrap-4-navbar.js' %}"></script>
+    <script src="{% static 'js/jquery-1.12.1.min.js' %}"></script>
+    <!-- popper js -->
+    <script src="{% static 'js/popper.min.js' %}"></script>
+    <!-- bootstrap js -->
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <!-- magnific popup js -->
+    <script src="{% static 'js/jquery.magnific-popup.js' %}"></script>
+    <!-- carousel js -->
+    <script src="{% static 'js/owl.carousel.min.js' %}"></script>
+    <!-- <script src="{% static 'js/jquery.nice-select.min.js' %}"></script> -->
+    <!-- slick js -->
+    <script src="{% static 'js/slick.min.js' %}"></script>
+    <script src="{% static 'js/jquery.counterup.min.js' %}"></script>
+    <script src="{% static 'js/waypoints.min.js' %}"></script>
+    <!-- <script src="{% static 'js/contact.js' %}"></script> -->
+    <!-- <script src="{% static 'js/jquery.ajaxchimp.min.js' %}"></script> -->
+    <script src="{% static 'js/jquery.form.js' %}"></script>
+    <script src="{% static 'js/jquery.validate.min.js' %}"></script>
+    <!-- <script src="{% static 'js/mail-script.js' %}"></script> -->
+    <!-- custom js -->
+    <script src="{% static 'js/custom.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery.counterup@2.1.0/jquery.counterup.min.js"></script>`
     {% endblock %}
 </body>
 </html>
-    
-
