--- a/home/templates/home/privacy_policy.html
+++ b/home/templates/home/privacy_policy.html
@@ -8,7 +8,7 @@
         <div class="container box_1170">
 
             <div class="row">
-                <div class="col-8">
+                <div class="col-12 mx-30">
                     <div class="typography">
                         <h2>Privacy Policy</h2>
                         <p>Last updated: January 27, 2024</p>
