--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -8,7 +8,7 @@
         <div class="row align-items-center">
             <div class="col-md-5">
                 <div class="banner_text">
-                    <div class="banner_text_iner page-error">
+                    <div class="banner_text_iner">
                         <h1>Ooops! Sorry!</h1>
                         <p>This painting has not been painted yet!</p>
                         <p>Why don't you check out one of the other paintings in the meantime!</p>
@@ -19,8 +19,8 @@
             </div>
         </div>
     </div>
-    <div class="error-banner_img">
-        <img src="{% static 'img/404.webp' %}" alt="Error 404 Page does not exist">
+    <div class="banner_img">
+        <img src="{% static 'img/404.webp' %}" alt="Error 404 Page does not exist" class="img-fluid">
     </div>
 </section>
 {% endblock %}
