--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -66,7 +66,14 @@
                             </div>
                         </div>
                     </div>
-
+                    <div class="col-12 col-md-6 order-md-first">
+                        <p class="text-muted mt-3 text-center text-md-left">
+                            {% if search_term or current_categories != 'None_None' %}
+                                <span><a href="{% url 'products' %}">Products Home</a> | </span>
+                            {% endif %}
+                            {{ products|length }} Products{% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
+                        </p>
+                    </div>
 
 
 
