--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -67,11 +67,11 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6 order-md-first">
-                        <p class="text-muted mt-3 text-center text-md-left">
+                        <p class="text-muted mt-3 text-center text-md-left single_product_item">
                             {% if search_term or current_categories != 'None_None' %}
-                                <span><a href="{% url 'products' %}">Products Home</a> | </span>
+                                <span><a href="{% url 'products' %}">See all Paintings </a> | </span>
                             {% endif %}
-                            {{ products|length }} Products{% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
+                            {{ products|length }} Paintings{% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
                         </p>
                     </div>
 
@@ -136,5 +136,10 @@
 {% endblock %}
 
 {% block niceselectjs %}
-<script src="{% static 'products/js/jquery.nice-select.min.js' %}"></script>
+{{ block.super }}
+<script type="text/javascript">
+  $(document).ready(function () {
+    $('select').niceSelect();
+  });
+</script>
 {% endblock %}
