--- a/templates/includes/toasts/toast_info.html
+++ b/templates/includes/toasts/toast_info.html
@@ -1,17 +1,19 @@
 <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-center align-items-center">
-
-    <!-- Then put toasts within -->
-    <div class="toast hide" role="alert" aria-live="assertive" aria-atomic="true" data-delay="5000">
-      <div class="toast-header">
-        <i class="fa-solid fa-circle-info"> </i>
-        <strong class="mr-auto">Alert!</strong>
-        <small>11 mins ago</small>
-        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="toast-body text-info">
-        {{ message }}
+  <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-autohide="false">
+    <div class="toast-header text-info text-uppercase">
+      <i class="fa-solid fa-circle-info text-info"></i>
+      <strong class="mr-auto">Information!</strong>
+      <hr>
+      <button type="button" class="ml-2 mb-1 close text-dark" data-dismiss="toast" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="toast-body">
+      <div class="row">
+        <div class="col">
+          {{ message }}
+        </div>
       </div>
     </div>
   </div>
+</div>
