--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,17 +1,58 @@
 <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-center align-items-center">
-
-    <!-- Then put toasts within -->
-    <div class="toast hide" role="alert" aria-live="assertive" aria-atomic="true" data-delay="5000">
-      <div class="toast-header alert">
-        <i class="fa-regular fa-circle-check"> </i>
-        <strong class="mr-auto">Success!</strong>
-        <hr>
-        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="toast-body text-success">
-        {{ message }}
+  <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-autohide="false">
+    <div class="toast-header text-success text-uppercase">
+      <i class="fa-regular fa-circle-check text-success"> </i>
+      <strong class="mr-auto">Success!</strong>
+      <hr>
+      <button type="button" class="ml-2 mb-1 close text-dark" data-dismiss="toast" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="toast-body">
+      <div class="row">
+        <div class="col">
+          {{ message }}
+          <hr>
+        </div>
       </div>
     </div>
+    {% if grand_total %}
+    <p class="logo-font ml-2">Items in your Shopping Cart:</p>
+    <div class="cart-notification-wrapper">
+      {% for item in cart_items %}
+      <div class="row">
+        <div class="col-3 my-1">
+          <img class="w-100 ml-2" src="{{ item.product.image.url }}">
+        </div>
+        <div class="col-9">
+          <p class="mt-1"><strong>{{ item.product.name }}</strong><span
+              class="float-right mr-2">€{{ item.product.price }}</span></p>
+        </div>
+      </div>
+      {% endfor %}
+    </div>
+    <div class="row">
+      <div class="col">
+        <strong>
+          <p class="mt-3 mb-1 ml-2">
+            Total:
+            <span class="float-right pr-2">€{{ total|floatformat:2 }}</span>
+          </p>
+        </strong>
+        <a href="{% url 'view_cart' %}" class="btn_3 btn-block rounded-0">
+          <span class="text-uppercase">Go To Checkout</span>
+          <span class="icon">
+            <i class="fas fa-lock ml-2"></i>
+          </span>
+        </a>
+        <a href="{% url 'products' %}" class="btn_1 btn-block rounded-0">
+          <span class="icon">
+            <i class="fa-solid fa-cart-shopping mr-2"></i>
+          </span>
+          <span class="text-uppercase">Continue Shopping</span>
+        </a>
+      </div>
+    </div>
+    {% endif %}
   </div>
+</div>
