Adjust spacing for social media icons

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -57,7 +57,7 @@
                                         <div class="optionalParent">
                                             <div class="clear foot">
                                                 <input type="submit" name="subscribe" id="mc-embedded-subscribe"
-                                                    class="button" value="Subscribe">
+                                                    class="button btn_3" value="Subscribe">
                                                 <p>Powered by:</p>
                                                 <p style="margin: 0px auto;"><a href="http://eepurl.com/iIUFVE"
                                                         title="Mailchimp - email marketing made easy and fun" target="_blank" rel="noopener" aria-label="Visit our Newsletter cooperation partner Mailchimp">
@@ -65,8 +65,7 @@
                                                             style="display: inline-block; background-color: transparent; border-radius: 4px;">
                                                             <img class="refferal_badge"
                                                                 src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-light.svg"
-                                                                alt="Intuit Mailchimp"
-                                                                style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;"></span></a>
+                                                                alt="Intuit Mailchimp"></span></a>
                                                 </p>
                                             </div>
                                         </div>
@@ -96,7 +95,7 @@
                     </div>
                 </div>
                 <div class="col-6">
-                    <div class="social_icon">
+                    <div class="social_icon text-center px-2">
                         <a href="https://www.facebook.com/61555624246656/" aria-label="Visit us on Facebook" target="_blank" rel="noopener"><i class="fab fa-facebook-f"></i></a>
                         <a href="https://www.instagram.com/" aria-label="Visit us on Instagram" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
                         <a href="https://www.linkedin.com/" aria-label="Visit us on Linkedin" target="_blank" rel="noopener"><i class="fab fa-linkedin-in"></i></a>
