--- a/static/css/base.css
+++ b/static/css/base.css
@@ -9,7 +9,7 @@
 }
 
 /* Logo image */
-.navbar-brand > img {
+.navbar-brand>img {
     padding-left: 10px;
 }
 
@@ -17,11 +17,10 @@
     text-transform: uppercase;
     font-weight: 500;
     font-size: 2rem;
-    
 }
+
 /* Product and Product Details Page */
 .section_padding_small {
-
     padding: 20px;
 }
 
@@ -80,10 +79,10 @@ hr {
 
 .column_centered {
     text-align: center;
-
 }
 
-.column_centered a, i {
+.column_centered a,
+i {
     color: #795376;
 }
 
@@ -99,16 +98,19 @@ hr {
     width: 350px;
     z-index: 5000;
 }
+
 .cart-notification-wrapper {
     height: 95px;
     overflow-x: hidden;
     overflow-y: auto;
 }
+
 .toast {
     font-family: "Rubik", sans-serif;
     font-size: 16px;
     color: #4B3049;
 }
+
 .toast-border {
     border-radius: 20px;
     border: 3px solid #4B3049;
@@ -122,6 +124,7 @@ hr {
 .toast-header i {
     padding-right: 7px;
 }
+
 .toast-body {
     color: #4B3049;
 }
@@ -130,20 +133,35 @@ hr {
     padding: 50px 0px;
 }
 
+/* Social Media Icons */
+.social_icon i {
+    color: #fff;
+}
+
 /* Allauth form formatting */
 .allauth-form-inner-content label:not([for='id_remember']) {
     display: none;
-}
-
-#edit_delete_details {
-    font-size: 1.75rem;
-    align-items: center;
 }
 
 /* Product File Upload Form */
 .btn-file {
     position: relative;
     overflow: hidden;
+}
+
+.description_hide {
+    display: none;
+    font-size: 0.75rem;
+}
+
+.descriptive_text:hover+.description_hide {
+    display: block;
+    color: #B08EAD;
+}
+
+#edit_delete_details {
+    font-size: 1.75rem;
+    align-items: center;
 }
 
 .btn-file input[type="file"] {
@@ -166,7 +184,6 @@ hr {
     border-color: #dc3545;
     border-radius: 0;
 }
-
 
 /* Navbar remove border */
 .navbar lg {
@@ -192,7 +209,7 @@ hr {
 
 /* Mailchimp Subscribe area */
 #mc-embedded-subscribe {
- 
+
     display: inline-block;
     margin-top: 1em;
     margin-bottom: 1em;
@@ -207,13 +224,14 @@ hr {
     transition: 0.5s;
     text-transform: capitalize;
     color: #fff;
-    &:hover{
+
+    &:hover {
         background-color: #fff;
         color: #795376;
     }
 }
 
-.container .box_1170 > p {
+.container .box_1170>p {
     font-family: "Rubik", sans-serif;
     line-height: 2;
     font-size: 15px;
@@ -222,7 +240,12 @@ hr {
     font-weight: 400;
 }
 
-.container .box_1170 > h1, h2, h3, h4, h5, h6 {
+.container .box_1170>h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     color: #4B3049;
     font-family: "Poppins", sans-serif;
     -webkit-transition: 0.5s;
@@ -235,7 +258,8 @@ hr {
     margin-top: 0.7rem;
 }
 
-.typography h4, h5 {
+.typography h4,
+h5 {
     margin-bottom: 0.5rem;
     margin-top: 0.5rem;
 }
@@ -253,12 +277,42 @@ hr {
     padding-left: 10px;
 }
 
-.description_hide {
-    display: none;
-    font-size: 0.75rem;
-  }
-      
-.descriptive_text:hover + .description_hide {
-    display: block;
-    color: #B08EAD;
-  }
+
+/* Subscribe Form  */
+.subscribe_form_mailchimp {
+    margin: 0 auto;
+    margin-top: 45px;
+    position: relative;
+    max-width: 558px;
+}
+
+.subscribe_form_mailchimp > input {
+    border: 1px solid #fff;
+    width: 100%;
+    background-color: transparent;
+    color: #fff;
+    border-radius: 50px;
+    padding: 19px 30px;
+    line-height: 20px;
+}
+
+.subscribe_form_mailchimp > btn_1 {
+    width: 50%;
+    padding: 15px 30px;
+    line-height: 16px;
+    border-radius: 50px;
+    position: absolute;
+    right: 5px;
+    top: 5px;
+}
+
+
+/* Mailchimp image link */
+.refferal_badge {
+    width: 220px; 
+    height: 40px; 
+    display: flex;
+    padding: 2px 0px; 
+    justify-content: center; 
+    align-items: center;
+}
