--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,84 +2,85 @@
 {% load static %}
 
 {% block content %}
-<!-- banner part start-->
-<section class="banner_part">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-md-5">
-                <div class="banner_text">
-                    <div class="banner_text_iner">
-                        <h1>Hanneles Original Art</h1>
-                        <p>Don't buy commodity prints when you can buy affordable original paintings!</p>
-                        <a href="{% url 'products' %}" aria-label="Visit our paintings page"  class="btn_1">Buy real art</a>
+<!-- Banner Part Start-->
+    <section class="banner_part">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-5">
+                    <div class="banner_text">
+                        <div class="banner_text_iner">
+                            <h1>Hanneles Original Art</h1>
+                            <p>Don't buy commodity prints when you can buy affordable original paintings!</p>
+                            <a href="{% url 'products' %}" aria-label="Visit our paintings page" class="btn_1">Buy real
+                                art</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="banner_img">
-        <img src="{% static 'img/banner.png' %}" alt="Flower image" class="img-fluid">
-    </div>
-</section>
-<!-- banner part start-->
+        <div class="banner_img">
+            <img src="{% static 'img/banner.png' %}" alt="Flower image" class="img-fluid">
+        </div>
+    </section>
+<!-- Banner Part End-->
 
-
-<!-- subscribe part here -->
-<section class="subscribe_part section_padding">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-lg-8">
-                <div class="subscribe_part_content">
-                    <div id="mc_embed_shell">
-                        <div id="mc_embed_signup">
-                            <div class="subscribe_form">
-                                <h2>Subscribe to our Newsletter!</h2>
-                                <form
-                                    action="https://herokuapp.us21.list-manage.com/subscribe/post?u=88090f70b333bca43697bfe49&amp;id=70e54690fe&amp;f_id=0012f2e6f0"
-                                    method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
-                                    class="validate" target="_blank">
-                                    <div id="mc_embed_signup_scroll">
-                                        <div class="mc-field-group">
-                                            <input type="email" name="EMAIL" class="required email" id="mce-EMAIL"
-                                                required="" value="" placeholder="Enter your Email address"></div>
-                                        <div id="mce-responses" class="clear foot">
-                                            <div class="response" id="mce-error-response" style="display: none;">
+<!-- Subscribe Part Start -->
+    <section class="subscribe_part section_padding">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
+                    <div class="subscribe_part_content">
+                        <div id="mc_embed_shell">
+                            <div id="mc_embed_signup">
+                                <div class="subscribe_form">
+                                    <h2>Subscribe to our Newsletter!</h2>
+                                    <form
+                                        action="https://herokuapp.us21.list-manage.com/subscribe/post?u=88090f70b333bca43697bfe49&amp;id=70e54690fe&amp;f_id=0012f2e6f0"
+                                        method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
+                                        class="validate" target="_blank">
+                                        <div id="mc_embed_signup_scroll">
+                                            <div class="mc-field-group">
+                                                <input type="email" name="EMAIL" class="required email" id="mce-EMAIL"
+                                                    required="" value="" placeholder="Enter your Email address"></div>
+                                            <div id="mce-responses" class="clear foot">
+                                                <div class="response" id="mce-error-response" style="display: none;">
+                                                </div>
+                                                <div class="response" id="mce-success-response" style="display: none;">
+                                                </div>
                                             </div>
-                                            <div class="response" id="mce-success-response" style="display: none;">
+                                            <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                                                /* real people should not fill this in and expect good things - do not
+                                                remove this or risk form bot signups */
+                                                <input type="text" name="b_88090f70b333bca43697bfe49_70e54690fe"
+                                                    tabindex="-1" value="">
+                                            </div>
+                                            <div class="optionalParent">
+                                                <div class="clear foot">
+                                                    <input type="submit" name="subscribe" id="mc-embedded-subscribe"
+                                                        class="button btn_3" value="Subscribe">
+                                                    <p>Powered by:</p>
+                                                    <p style="margin: 0px auto;"><a href="http://eepurl.com/iIUFVE"
+                                                            title="Mailchimp - email marketing made easy and fun"
+                                                            target="_blank" rel="noopener"
+                                                            aria-label="Visit our Newsletter cooperation partner Mailchimp">
+                                                            <span>
+                                                                <img class="refferal_badge"
+                                                                    src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-light.svg"
+                                                                    alt="Intuit Mailchimp"></span></a>
+                                                    </p>
+                                                </div>
                                             </div>
                                         </div>
-                                        <div aria-hidden="true" style="position: absolute; left: -5000px;">
-                                            /* real people should not fill this in and expect good things - do not
-                                            remove this or risk form bot signups */
-                                            <input type="text" name="b_88090f70b333bca43697bfe49_70e54690fe"
-                                                tabindex="-1" value="">
-                                        </div>
-                                        <div class="optionalParent">
-                                            <div class="clear foot">
-                                                <input type="submit" name="subscribe" id="mc-embedded-subscribe"
-                                                    class="button btn_3" value="Subscribe">
-                                                <p>Powered by:</p>
-                                                <p style="margin: 0px auto;"><a href="http://eepurl.com/iIUFVE"
-                                                        title="Mailchimp - email marketing made easy and fun" target="_blank" rel="noopener" aria-label="Visit our Newsletter cooperation partner Mailchimp">
-                                                        <span
-                                                            style="display: inline-block; background-color: transparent; border-radius: 4px;">
-                                                            <img class="refferal_badge"
-                                                                src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-light.svg"
-                                                                alt="Intuit Mailchimp"></span></a>
-                                                </p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </form>
+                                    </form>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
-<!-- subscribe part end -->
+    </section>
+<!-- Subscribe Part End -->
 
 <!--::footer_part start::-->
 <footer class="footer_part">
@@ -95,10 +96,10 @@
                     </div>
                 </div>
                 <div class="col-6">
-                    <div class="social_icon text-center px-2">
-                        <a href="https://www.facebook.com/61555624246656/" aria-label="Visit us on Facebook" target="_blank" rel="noopener"><i class="fab fa-facebook-f"></i></a>
-                        <a href="https://www.instagram.com/" aria-label="Visit us on Instagram" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.linkedin.com/" aria-label="Visit us on Linkedin" target="_blank" rel="noopener"><i class="fab fa-linkedin-in"></i></a>
+                    <div class="social_icon float-right px-2">
+                        <a href="https://www.facebook.com/61555624246656/" aria-label="Visit us on Facebook" target="_blank" rel="noopener"><i class="fab fa-facebook-f px-10"></i></a>
+                        <a href="https://www.instagram.com/" aria-label="Visit us on Instagram" target="_blank" rel="noopener"><i class="fab fa-instagram px-2"></i></a>
+                        <a href="https://www.linkedin.com/" aria-label="Visit us on Linkedin" target="_blank" rel="noopener"><i class="fab fa-linkedin-in px-2"></i></a>
                     </div>
                 </div>
             </div>
