--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -8,7 +8,8 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="breadcrumb_iner">
-                    <h2>Paintings by Hannele</h2>
+                    <h2>Original Art by Hannele</h2>
+                    <h3>Buy real paintings for home decoration</h3>
                 </div>
             </div>
         </div>
@@ -18,109 +19,112 @@
 
 <!-- product list part start-->
 <section class="product_list section_padding_small">
- 
-        <div class="container">
-            <div class="row">
-
-                <div class="col-md-12">
-                    <div class="product_list">
-                        <div class="row">
-                            <div class="col-lg-4 col-sm-4">
-                                <div class="single_sedebar">
-                                    <div class="select_option select_option_bottom">
-                                        <div class="select_option_list dropdown_select pointer">Select Category <i class="right fas fa-caret-down"></i> </div>
-                                        <div class="select_option_dropdown">
-                                            <p><a href="{% url 'products' %}?category=flowers">Flowers</a></p>
-                                            <p><a href="{% url 'products' %}?category=animals">Animals</a></p>
-                                            <p><a href="{% url 'products' %}?category=landscape">Landscape</a></p>
-                                            <p><a href="{% url 'products' %}?category=portrait">Portrait</a></p>
-                                            <p><a href="{% url 'products' %}?category=abstract">Abstract</a></p>
-                                            <p><a href="{% url 'products' %}?category=impressionism">Impressionism</a></p>
-                                            <p><a href="{% url 'products' %}?category=still_life">Still Life</a></p>
-                                        </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="product_list">
+                    <div class="row">
+                        <div class="col-lg-4 col-sm-4">
+                            <div class="single_sedebar">
+                                <div class="select_option select_option_bottom">
+                                    <div class="select_option_list dropdown_select pointer">Select Category <i
+                                            class="right fas fa-caret-down"></i> </div>
+                                    <div class="select_option_dropdown">
+                                        <p><a href="{% url 'products' %}?category=flowers">Flowers</a></p>
+                                        <p><a href="{% url 'products' %}?category=animals">Animals</a></p>
+                                        <p><a href="{% url 'products' %}?category=landscape">Landscape</a></p>
+                                        <p><a href="{% url 'products' %}?category=portrait">Portrait</a></p>
+                                        <p><a href="{% url 'products' %}?category=abstract">Abstract</a></p>
+                                        <p><a href="{% url 'products' %}?category=impressionism">Impressionism</a></p>
+                                        <p><a href="{% url 'products' %}?category=still_life">Still Life</a></p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-sm-4">
-                                <div class="single_sedebar">
-                                    <div class="select_option">
-                                        <div class="select_option_list dropdown_select pointer">Select Format <i class="right fas fa-caret-down"></i> </div>
-                                        <div class="select_option_dropdown">
-                                            <p><a href="{% url 'products' %}?format=Portrait">Portrait</a></p>
-                                            <p><a href="{% url 'products' %}?format=Landscape">Landscape</a></p>
-                                            <p><a href="{% url 'products' %}?format=Square">Square</a></p>
-                                        </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-4">
+                            <div class="single_sedebar">
+                                <div class="select_option">
+                                    <div class="select_option_list dropdown_select pointer">Select Format <i
+                                            class="right fas fa-caret-down"></i> </div>
+                                    <div class="select_option_dropdown">
+                                        <p><a href="{% url 'products' %}?format=Portrait">Portrait</a></p>
+                                        <p><a href="{% url 'products' %}?format=Landscape">Landscape</a></p>
+                                        <p><a href="{% url 'products' %}?format=Square">Square</a></p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-sm-4">
-                                <div class="single_sedebar">
-                                    <div class="select_option">
-                                        <div class="select_option_list dropdown_select pointer">Sort by Price <i class="right fas fa-caret-down"></i> <i class="right fas fa-caret-up"></i> </div>
-                                        <div class="select_option_dropdown">
-                                            <p><a href="{% url 'products' %}?sort=price&direction=asc">Low to high</a></p>
-                                            <p><a href="{% url 'products' %}?sort=price&direction=desc">High to low</a></p>
-                                        </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-4">
+                            <div class="single_sedebar">
+                                <div class="select_option">
+                                    <div class="select_option_list dropdown_select pointer">Sort by Price <i
+                                            class="right fas fa-caret-down"></i> <i class="right fas fa-caret-up"></i>
+                                    </div>
+                                    <div class="select_option_dropdown">
+                                        <p><a href="{% url 'products' %}?sort=price&direction=asc">Low to high</a></p>
+                                        <p><a href="{% url 'products' %}?sort=price&direction=desc">High to low</a></p>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 order-md-first">
-                        <p class="text-muted mt-3 text-center text-md-left single_product_item">
-                            {% if search_term or current_categories != 'None_None' %}
-                                <span><a href="{% url 'products' %}">See all Paintings </a> | </span>
-                            {% endif %}
-                            {{ products|length }} Paintings{% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
-                        </p>
-                    </div>
-
-
-
-                    <div class="product_list">
-                        <div class="row">
-                            {% for product in products %}
-                            <div class="col-lg-4 col-sm-4">
-                                <div class="single_product_item">
-                                    {% if product.image %}
-                                    <img src="{{ product.image.url }}" alt="{{ product.name }} {{ product.technique }}"
-                                        class="img-fluid">
-                                    {% else %}
-                                    <img src="{{ MEDIA_URL }}noimage.png"
-                                        alt="{{ product.name }} {{ product.technique }}" class="img-fluid">
-                                    {% endif %}
-                                    <h3><a href="{% url 'product_detail' product.id %}">{{ product.name }}
+                </div>
+                <div class="col-12 col-md-6 order-md-first">
+                    <p class="text-muted mt-3 text-center text-md-left single_product_item">
+                        {% if search_term or current_categories != 'None_None' %}
+                        <span><a href="{% url 'products' %}">See all Paintings </a> | </span>
+                        {% endif %}
+                        {{ products|length }} Paintings{% if search_term %} found for
+                        <strong>"{{ search_term }}"</strong>{% endif %}
+                    </p>
+                </div>
+                <div class="product_list">
+                    <div class="row">
+                        {% for product in products %}
+                        <div class="col-lg-4 col-sm-4">
+                            <div class="single_product_item">
+                                {% if product.image %}
+                                <img src="{{ product.image.url }}" alt="{{ product.name }} {{ product.technique }}"
+                                    class="img-fluid">
+                                {% else %}
+                                <img src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }} {{ product.technique }}"
+                                    class="img-fluid">
+                                {% endif %}
+                                <h3><a href="{% url 'product_detail' product.id %}">{{ product.name }}
                                         <i class="fa-solid fa-arrow-up-right-from-square descriptive_text">
                                         </i>
-                                    <div class="description_hide">Click for details</div></a></h3>
-                                    {% if product.category %}
-                                    <p><a href="{% url 'products' %}?category={{ product.category.name }}">Category: {{ product.category.friendly_name }}</a>
-                                    </p>
+                                        <div class="description_hide">Click for details</div>
+                                    </a></h3>
+                                {% if product.category %}
+                                <p><a href="{% url 'products' %}?category={{ product.category.name }}">Category:
+                                        {{ product.category.friendly_name }}</a>
+                                </p>
+                                {% endif %}
+                                <p>Dimension: {{ product.size }}</p>
+                                {% if product.sold is True %}
+                                <p class="text-uppercase"><strong>sold</strong></p>
+                                {% else %}
+                                <p>Price: € {{ product.price }}
                                     {% endif %}
-                                    <p>Dimension: {{ product.size }}</p>
-                                    {% if product.sold is True %}
-                                    <p class="text-uppercase"><strong>sold</strong></p>
-                                    {% else %}
-                                    <p>Price: € {{ product.price }}
+                                    {% if request.user.is_superuser %}
+                                    <span class="float-right">
+                                        <a href="{% url 'edit_product' product.id %}" title="Update"><i
+                                                class="fa-regular fa-pen-to-square descriptive_text"></i><span
+                                                class="description_hide float-left">Update</span></a>
+                                        <a href="{% url 'delete_product' product.id %}" title="Delete"
+                                            class="confirm-delete"><i
+                                                class="fa-regular fa-trash-can descriptive_text"></i><span
+                                                class="description_hide">Delete</span></a></span>
                                     {% endif %}
-                                        {% if request.user.is_superuser %}
-                                        <span class="float-right">
-                                            <a href="{% url 'edit_product' product.id %}" title="Update"><i class="fa-regular fa-pen-to-square descriptive_text"></i><span class="description_hide float-left">Update</span></a>
-                                            <a href="{% url 'delete_product' product.id %}" title="Delete" class="confirm-delete"><i class="fa-regular fa-trash-can descriptive_text"></i><span class="description_hide">Delete</span></a></span>
-                                        {% endif %}
-                                    </p>
-
-                                </div>
+                                </p>
                             </div>
-                            {% endfor %}
-
                         </div>
-
+                        {% endfor %}
                     </div>
                 </div>
             </div>
         </div>
-
+    </div>
 </section>
 <!-- product list part end-->
 
@@ -134,12 +138,14 @@
         })
         </script>
 {% endblock %}
-
-{% block niceselectjs %}
-{{ block.super }}
+{% block jqueryselect %}
 <script type="text/javascript">
-  $(document).ready(function () {
-    $('select').niceSelect();
-  });
+    $('.select_option_dropdown').hide();
+    $(".select_option_list").click(function () {
+    $(this).parent(".select_option").children(".select_option_dropdown").slideToggle('100');
+    $(this).find(".right").toggleClass("fas fa-caret-down, fas fa-caret-up");
+    });
 </script>
+<script src="{% static 'js/jquery.nice-select.min.js' %}"></script> 
 {% endblock %}
+
