--- a/static/css/base.css
+++ b/static/css/base.css
@@ -179,6 +179,7 @@ i {
     border-color: #dc3545;
 }
 
+
 .custom-checkbox .custom-control-input:checked~.custom-control-label::before {
     background-color: #dc3545;
     border-color: #dc3545;
@@ -231,7 +232,8 @@ i {
     }
 }
 
-.container .box_1170>p {
+
+/* .container .box_1170>p {
     font-family: "Rubik", sans-serif;
     line-height: 2;
     font-size: 15px;
@@ -251,7 +253,7 @@ h6 {
     -webkit-transition: 0.5s;
     transition: 0.5s;
     margin-bottom: 0.5rem;
-}
+} */
 
 .typography h3 {
     margin-bottom: 0.7rem;
@@ -315,4 +317,7 @@ h5 {
     padding: 2px 0px; 
     justify-content: center; 
     align-items: center;
+    display: inline-block; 
+    background-color: transparent; 
+    border-radius: 4px;
 }
