--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -12,7 +12,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="breadcrumb_iner">
-                    <h2>My Profile</h2>
+                    <h2>My Account</h2>
                 </div>
             </div>
         </div>
