--- a/templates/base.html
+++ b/templates/base.html
@@ -2,15 +2,14 @@
 
 <!doctype html>
 <html lang="en">
-
 <head>
+
     {% block meta %}
-    <!-- Required meta tags -->
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="Description" content="Enter your description here"/>
-    <meta name="Keywords" content=""/>
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="Buy affordable original paintings instead of mass-produced prints. Allow yourself some real fine art from your local emerging artist in Sweden">
+        <meta name="keywords" content="painting, acryl, canvas, original, decoration, impressionism, unique, affordable, portrait, landscape, animals, abstract, still life">
     {% endblock %} 
 
     {% block extra_meta %}
@@ -23,29 +22,22 @@
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Finger+Paint&display=swap" rel="stylesheet">
     <link rel="icon" href="{% static 'img/favicon.png' %}">
     {% endblock %}
 
     {% block extra_css %}
     <!-- Pillowmart Bootstrap CSS -->
     <link rel="stylesheet" href="{% static 'css/animate.css' %}">
-    <!-- owl carousel CSS -->
     <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
-    <!-- font awesome CSS -->
     <link rel="stylesheet" href="{% static 'css/all.css' %}">
-    <!-- flaticon CSS -->
     <link rel="stylesheet" href="{% static 'css/flaticon.css' %}">
     <link rel="stylesheet" href="{% static 'css/themify-icons.css' %}">
-    <!-- font awesome CSS -->
     <link rel="stylesheet" href="{% static 'css/magnific-popup.css' %}">
-    <!-- swiper CSS -->
     <link rel="stylesheet" href="{% static 'css/slick.css' %}">
-    <!-- style CSS -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     {% endblock %}
     
-    {% block corejs %}    
+    {% block corejs %}
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" 
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
@@ -62,108 +54,108 @@
     <title>Hanneles Art Gallery & Academy</title>
 </head> 
 <body>
-<!-- Navigation start-->
-    <header class="main_menu home_menu">
-        <div class="container">
-            <div class="row align-items-center justify-content-center">
-                <div class="col-lg-12">
-                    <nav class="navbar navbar-expand-lg navbar-light">
-                        <button class="navbar-toggler" type="button" data-toggle="collapse"
-                        data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                        <a class="navbar-brand" href="{% url 'home' %}">
-                            <img src="{% static 'img/logo.png' %}" alt="logo">
-                        </a>
 
-                        <div class="collapse navbar-collapse main-menu-item" id="navbarNavDropdown">
-                            <ul class="navbar-nav">
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="{% url 'home' %}">Home</a>
-                                </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href=""
-                                        id="navbarDropdown_3" role="button" data-toggle="dropdown" aria-haspopup="true"
-                                        aria-expanded="false">
-                                        Art Gallery
-                                    </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
-                                        <a class="dropdown-item" href="{% url 'products' %}"><strong>All
-                                                Paintings</strong></a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item"
-                                            href="{% url 'products' %}?category=flowers">Flowers</a>
-                                        <a class="dropdown-item"
-                                            href="{% url 'products' %}?category=animals">Animals</a>
-                                        <a class="dropdown-item"
-                                            href="{% url 'products' %}?category=landscape">Landscape</a>
-                                        <a class="dropdown-item"
-                                            href="{% url 'products' %}?category=portrait">Portrait</a>
-                                        <a class="dropdown-item"
-                                            href="{% url 'products' %}?category=abstract">Abstract</a>
-                                        <a class="dropdown-item"
-                                            href="{% url 'products' %}?category=impressionism">Impressionism</a>
-                                        <a class="dropdown-item" href="{% url 'products' %}?category=still_life">Still
-                                            Life</a>
-                                    </div>
-                                </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="" id="navbarDropdown_3" role="button"
-                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        My Account
-                                    </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
-                                        {% if request.user.is_authenticated %}
-                                        {% if request.user.is_superuser %}
-                                        <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
-                                        {% endif %}
-                                        <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
-                                        <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-                                        {% else %}
-                                        <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                                        <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
-                                        {% endif %}
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="hearer_icon d-flex align-items-center">
-                            <span>
-                                <a id="search_1" href="javascript:void(0)"><i class="ti-search"></i></a>
-                            </span>
-                            <span>
-                                <a class="text-info text-black nav-link" href="{% url 'view_cart' %}">
-                                    <i class="flaticon-shopping-cart-black-shape cart-sum">
-                                    </i>
+<!-- Navigation start-->
+<header class="main_menu home_menu">
+    <div class="container">
+        <div class="row align-items-center justify-content-center">
+            <div class="col-lg-12">
+                <nav class="navbar navbar-expand-lg navbar-light">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                    <a class="navbar-brand" href="{% url 'home' %}">
+                        <img src="{% static '/img/logo.png' %}" alt="logo">
+                    </a>
+                    <div class="collapse navbar-collapse main-menu-item" id="navbarNavDropdown">
+                        <ul class="navbar-nav">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="{% url 'home' %}">Home</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href=""
+                                    id="navbarDropdown_3" role="button" data-toggle="dropdown" aria-haspopup="true"
+                                    aria-expanded="false">
+                                    Art Gallery
                                 </a>
-                            </span>
-                            <span class="show-total">
-                                <a class="{% if grand_total %}text-info {% else %}text-black{% endif %} nav-link"
-                                    href="{% url 'view_cart' %}">
-                                    {% if grand_total %}
-                                    €{{ grand_total|floatformat:2 }}
-                                    {% else %}
-                                    €0.00
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
+                                    <a class="dropdown-item" href="{% url 'products' %}"><strong>All
+                                            Paintings</strong></a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item"
+                                        href="{% url 'products' %}?category=flowers">Flowers</a>
+                                    <a class="dropdown-item"
+                                        href="{% url 'products' %}?category=animals">Animals</a>
+                                    <a class="dropdown-item"
+                                        href="{% url 'products' %}?category=landscape">Landscape</a>
+                                    <a class="dropdown-item"
+                                        href="{% url 'products' %}?category=portrait">Portrait</a>
+                                    <a class="dropdown-item"
+                                        href="{% url 'products' %}?category=abstract">Abstract</a>
+                                    <a class="dropdown-item"
+                                        href="{% url 'products' %}?category=impressionism">Impressionism</a>
+                                    <a class="dropdown-item" href="{% url 'products' %}?category=still_life">Still
+                                        Life</a>
+                                </div>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="" id="navbarDropdown_3" role="button"
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    My Account
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
+                                    {% if request.user.is_authenticated %}
+                                    {% if request.user.is_superuser %}
+                                    <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
                                     {% endif %}
-                                </a>
-                            </span>
-                        </div>
-                    </nav>
-                </div>
+                                    <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
+                                    <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                                    {% else %}
+                                    <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                                    <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                                    {% endif %}
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="hearer_icon d-flex align-items-center">
+                        <span>
+                            <a id="search_1" href="javascript:void(0)"><i class="ti-search"></i></a>
+                        </span>
+                        <span>
+                            <a class="text-info text-black nav-link" href="{% url 'view_cart' %}">
+                                <i class="flaticon-shopping-cart-black-shape cart-sum">
+                                </i>
+                            </a>
+                        </span>
+                        <span class="show-total">
+                            <a class="{% if grand_total %}text-info {% else %}text-black{% endif %} nav-link"
+                                href="{% url 'view_cart' %}">
+                                {% if grand_total %}
+                                €{{ grand_total|floatformat:2 }}
+                                {% else %}
+                                €0.00
+                                {% endif %}
+                            </a>
+                        </span>
+                    </div>
+                </nav>
             </div>
         </div>
-        <div class="search_input" id="search_input_box">
-            <div class="container ">
-                <form class="d-flex justify-content-between search-inner" method="GET" action="{% url 'products' %}">
-                    <input type="text" class="form-control" id="search_input" name="q"
-                        placeholder="Enter Search Words Here">
-                    <button type="submit" class="btn"></button>
-                    <span class="ti-close" id="close_search" title="Close Search"></span>
-                </form>
-            </div>
+    </div>
+    <div class="search_input" id="search_input_box">
+        <div class="container ">
+            <form class="d-flex justify-content-between search-inner" method="GET" action="{% url 'products' %}">
+                <input type="text" class="form-control" id="search_input" name="q"
+                    placeholder="Enter Search Words Here">
+                <button type="submit" class="btn"></button>
+                <span class="ti-close" id="close_search" title="Close Search"></span>
+            </form>
         </div>
-    </header>
+    </div>
+</header>
 <!--Navigation end-->
 
 <!--Messages start-->
@@ -193,35 +185,40 @@
     {% endblock %}
 
     {% block postloadjs %}
-    <script type="text/javascript">
-        $('.toast').toast('show');
-    </script>
+        <script type="text/javascript">
+            $('.toast').toast('show');
+        </script>
     {% endblock %}
 
     {% block jquery_template %}
-    <!-- jquery plugins here-->
-    <script src="{% static 'js/bootstrap-4-navbar.js' %}"></script>
-    <script src="{% static 'js/jquery-1.12.1.min.js' %}"></script>
-    <!-- popper js -->
-    <script src="{% static 'js/popper.min.js' %}"></script>
-    <!-- bootstrap js -->
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <!-- magnific popup js -->
-    <script src="{% static 'js/jquery.magnific-popup.js' %}"></script>
-    <!-- carousel js -->
-    <script src="{% static 'js/owl.carousel.min.js' %}"></script>
-    <!-- <script src="{% static 'js/jquery.nice-select.min.js' %}"></script> -->
-    <!-- slick js -->
-    <script src="{% static 'js/slick.min.js' %}"></script>
-    <script src="{% static 'js/jquery.counterup.min.js' %}"></script>
-    <script src="{% static 'js/waypoints.min.js' %}"></script>
-    <!-- <script src="{% static 'js/contact.js' %}"></script> -->
-    <!-- <script src="{% static 'js/jquery.ajaxchimp.min.js' %}"></script> -->
-    <script src="{% static 'js/jquery.form.js' %}"></script>
-    <script src="{% static 'js/jquery.validate.min.js' %}"></script>
-    <!-- <script src="{% static 'js/mail-script.js' %}"></script> -->
-    <!-- custom js -->
-    <script src="{% static 'js/custom.js' %}"></script>
+    <!-- Pillowmart jquery plugins here-->
+        <script src="{% static 'js/bootstrap-4-navbar.js' %}"></script>
+        <script src="{% static 'js/jquery-1.12.1.min.js' %}"></script>
+        <script src="{% static 'js/popper.min.js' %}"></script>
+        <script src="{% static 'js/bootstrap.min.js' %}"></script>
+        <script src="{% static 'js/jquery.magnific-popup.js' %}"></script>
+        <script src="{% static 'js/owl.carousel.min.js' %}"></script>
+        <!-- <script src="{% static 'js/jquery.nice-select.min.js' %}"></script>  -->
+        <script src="{% static 'js/slick.min.js' %}"></script>
+        <script src="{% static 'js/jquery.counterup.min.js' %}"></script>
+        <script src="{% static 'js/waypoints.min.js' %}"></script>
+        <script src="{% static 'js/contact.js' %}"></script>
+        <!-- <script src="{% static 'js/jquery.ajaxchimp.min.js' %}"></script> -->
+        <script src="{% static 'js/jquery.form.js' %}"></script>
+        <script src="{% static 'js/jquery.validate.min.js' %}"></script>
+        <script src="{% static 'js/mail-script.js' %}"></script>
+        <script src="{% static 'js/custom.js' %}"></script>
     {% endblock %}
+    {% block jqueryselect %}
+    <script type="text/javascript">
+        $('.select_option_dropdown').hide();
+        $(".select_option_list").click(function () {
+        $(this).parent(".select_option").children(".select_option_dropdown").slideToggle('100');
+        $(this).find(".right").toggleClass("fas fa-caret-down, fas fa-caret-up");
+        });
+    </script>
+    <script src="{% static 'js/jquery.nice-select.min.js' %}"></script> 
+    {% endblock %}
+
 </body>
 </html>
