--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -20,17 +20,16 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-lg-12">
-      <div class="product_img_slide owl-carousel">
         <div class="single_product_img">
           {% if product.image %}
-          <a href="{{ product.image.url }}"> <img src="{{ product.image.url }}" target="_blank" alt="{{ product.name }} {{ product.technique }}" class="img-fluid"></a>
+          <a href="{{ product.image.url }}"> <img src="{{ product.image.url }}" target="_blank" alt="{{ product.name }} {{ product.technique }}" class="img-fluid painting-image"></a>
           {% else %}
           <img src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }} {{ product.technique }}" class="img-fluid">
           {% endif %}
         </div>      
       </div>
     </div>
-    <div class="col-lg-8">
+    <div class="col-8 offset-md-2">
         <div class="single_product_text text-center">
             <h3>{{ product.name }}</h3>
             <p>{{ product.category.friendly_name }}</p>
@@ -105,14 +104,4 @@
             return confirm('Are you sure you want to delete the painting?');
         })
         </script>
-{% endblock %}
-{% block jqueryselect %}
-<script type="text/javascript">
-    $('.select_option_dropdown').hide();
-    $(".select_option_list").click(function () {
-    $(this).parent(".select_option").children(".select_option_dropdown").slideToggle('100');
-    $(this).find(".right").toggleClass("fas fa-caret-down, fas fa-caret-up");
-    });
-</script>
-<script src="{% static 'js/jquery.nice-select.min.js' %}"></script> 
 {% endblock %}
