--- a/templates/base.html
+++ b/templates/base.html
@@ -2,21 +2,25 @@
 
 <!doctype html>
 <html lang="en">
+
 <head>
 
     {% block meta %}
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="Buy affordable original paintings instead of mass-produced prints. Allow yourself some real fine art from your local emerging artist in Sweden">
-        <meta name="keywords" content="painting, acryl, canvas, original, decoration, impressionism, unique, affordable, portrait, landscape, animals, abstract, still life">
-    {% endblock %} 
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description"
+        content="Buy affordable original paintings instead of mass-produced prints. Allow yourself some real fine art from your local emerging artist in Sweden">
+    <meta name="keywords"
+        content="painting, acryl, canvas, original, decoration, impressionism, unique, affordable, portrait, landscape, animals, abstract, still life">
+    {% endblock %}
 
     {% block extra_meta %}
     {% endblock %}
 
     {% block corecss %}
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.6.0/materia/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
@@ -36,10 +40,10 @@
     <link rel="stylesheet" href="{% static 'css/slick.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     {% endblock %}
-    
+
     {% block corejs %}
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" 
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
     <!-- Font Awesome -->
@@ -50,133 +54,108 @@
 
     {% block extra_js %}
     {% endblock %}
- 
+
     <title>Hanneles Art Gallery & Academy</title>
-</head> 
+</head>
 <body>
 
-<!-- Navigation start-->
-<header class="main_menu home_menu">
-    <div class="container">
-        <div class="row align-items-center justify-content-center">
-            <div class="col-lg-12">
-                <nav class="navbar navbar-expand-lg navbar-light">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                    <a class="navbar-brand" href="{% url 'home' %}">
-                        <img src="https://hanneles-art-gallery.s3.eu-north-1.amazonaws.com/media/logo.png" alt="logo">
-                    </a>
-                    <div class="collapse navbar-collapse main-menu-item" id="navbarNavDropdown">
-                        <ul class="navbar-nav">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="{% url 'home' %}">Home</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href=""
-                                    id="navbarDropdown_3" role="button" data-toggle="dropdown" aria-haspopup="true"
-                                    aria-expanded="false">
-                                    Art Gallery
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
-                                    <a class="dropdown-item" href="{% url 'products' %}"><strong>All
-                                            Paintings</strong></a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item"
-                                        href="{% url 'products' %}?category=flowers">Flowers</a>
-                                    <a class="dropdown-item"
-                                        href="{% url 'products' %}?category=animals">Animals</a>
-                                    <a class="dropdown-item"
-                                        href="{% url 'products' %}?category=landscape">Landscape</a>
-                                    <a class="dropdown-item"
-                                        href="{% url 'products' %}?category=portrait">Portrait</a>
-                                    <a class="dropdown-item"
-                                        href="{% url 'products' %}?category=abstract">Abstract</a>
-                                    <a class="dropdown-item"
-                                        href="{% url 'products' %}?category=impressionism">Impressionism</a>
-                                    <a class="dropdown-item" href="{% url 'products' %}?category=still_life">Still
-                                        Life</a>
-                                </div>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="" id="navbarDropdown_3" role="button"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    My Account
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
-                                    {% if request.user.is_authenticated %}
-                                    {% if request.user.is_superuser %}
-                                    <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
-                                    {% endif %}
-                                    <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
-                                    <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+    <header class="container-fluid fixed-top">
+        <div id="topnav" class="row bg-white pt-lg 2 d-none d-lg-flex">
+            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
+                <a class="nav-link main-logo-link" href="{% url 'home' %}">
+                    <img src="https://hanneles-art-gallery.s3.eu-north-1.amazonaws.com/media/logo.png" alt="logo">
+                </a>
+            </div>
+            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+                <form method="GET" action="{% url 'products' %}">
+                    <div class="input-group w-100">
+                        <input class="form-control" type="text" name="q" placeholder="Search our site">
+                        <div class="input-group-append">
+                            <button class="form-control" type="submit">
+                                <span class="icon">
+                                    <i class="fas fa-search"></i>
+                                </span>
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+                <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+                    <li class="list-inline-item dropdown">
+                        <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            <div class="text-center">
+                                <div><i class="fas fa-user fa-lg"></i></div>
+                                <p class="my-0">My Account</p>
+                            </div>
+                        </a>
+                        <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                            {% if request.user.is_authenticated %}
+                            {% if request.user.is_superuser %}
+                            <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
+                            {% endif %}
+                            <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
+                            <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                            {% else %}
+                            <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                            <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                            {% endif %}
+                        </div>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
+                            href="{% url 'view_cart' %}">
+                            <div class="text-center">
+                                <div><i class="flaticon-shopping-cart-black-shape cart-sum">
+                                    </i></div>
+                                <p class="my-0">
+                                    {% if grand_total %}
+                                    €{{ grand_total|floatformat:2 }}
                                     {% else %}
-                                    <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                                    <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                                    €0.00
                                     {% endif %}
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="hearer_icon d-flex align-items-center">
-                        <span>
-                            <a id="search_1" href="javascript:void(0)"><i class="ti-search"></i></a>
-                        </span>
-                        <span>
-                            <a class="text-info text-black nav-link" href="{% url 'view_cart' %}">
-                                <i class="flaticon-shopping-cart-black-shape cart-sum">
-                                </i>
-                            </a>
-                        </span>
-                        <span class="show-total">
-                            <a class="{% if grand_total %}text-info {% else %}text-black{% endif %} nav-link"
-                                href="{% url 'view_cart' %}">
-                                {% if grand_total %}
-                                €{{ grand_total|floatformat:2 }}
-                                {% else %}
-                                €0.00
-                                {% endif %}
-                            </a>
-                        </span>
-                    </div>
-                </nav>
+                                </p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
-    </div>
-    <div class="search_input" id="search_input_box">
-        <div class="container ">
-            <form class="d-flex justify-content-between search-inner" method="GET" action="{% url 'products' %}">
-                <input type="text" class="form-control" id="search_input" name="q"
-                    placeholder="Enter Search Words Here">
-                <button type="submit" class="btn"></button>
-                <span class="ti-close" id="close_search" title="Close Search"></span>
-            </form>
         </div>
-    </div>
-</header>
-<!--Navigation end-->
+        <div class="row bg-white">
+            <nav class="navbar navbar-expand-lg navbar-light w-100">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
+                    aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                {% include 'includes/mobile-top-header.html' %}
+                {% include 'includes/main-navigation.html' %}
+            </nav>
+        </div>
+        </div>
+    </header>
+    <!--Navigation end-->
 
-<!--Messages start-->
+    <!--Messages start-->
     {% if messages %}
-        <div class="message-container">
-            {% for message in messages %}
-                {% with message.level as level %}
-                    {% if level == 40 %}
-                        {% include 'includes/toasts/toast_error.html' %}
-                    {% elif level == 30 %}
-                        {% include 'includes/toasts/toast_warning.html' %}
-                    {% elif level == 25 %}
-                        {% include 'includes/toasts/toast_success.html' %}
-                    {% else %}
-                        {% include 'includes/toasts/toast_info.html' %}
-                    {% endif %}
-                {% endwith %}
-            {% endfor %}
-        </div>
+    <div class="message-container">
+        {% for message in messages %}
+        {% with message.level as level %}
+        {% if level == 40 %}
+        {% include 'includes/toasts/toast_error.html' %}
+        {% elif level == 30 %}
+        {% include 'includes/toasts/toast_warning.html' %}
+        {% elif level == 25 %}
+        {% include 'includes/toasts/toast_success.html' %}
+        {% else %}
+        {% include 'includes/toasts/toast_info.html' %}
+        {% endif %}
+        {% endwith %}
+        {% endfor %}
+    </div>
     {% endif %}
-<!--Messages end-->
+    <!--Messages end-->
 
     {% block page_header %}
     {% endblock %}
@@ -185,40 +164,11 @@
     {% endblock %}
 
     {% block postloadjs %}
-        <script type="text/javascript">
-            $('.toast').toast('show');
-        </script>
-    {% endblock %}
-
-    {% block jquery_template %}
-    <!-- Pillowmart jquery plugins here-->
-        <script src="{% static 'js/bootstrap-4-navbar.js' %}"></script>
-        <script src="{% static 'js/jquery-1.12.1.min.js' %}"></script>
-        <script src="{% static 'js/popper.min.js' %}"></script>
-        <script src="{% static 'js/bootstrap.min.js' %}"></script>
-        <script src="{% static 'js/jquery.magnific-popup.js' %}"></script>
-        <script src="{% static 'js/owl.carousel.min.js' %}"></script>
-        <!-- <script src="{% static 'js/jquery.nice-select.min.js' %}"></script>  -->
-        <script src="{% static 'js/slick.min.js' %}"></script>
-        <script src="{% static 'js/jquery.counterup.min.js' %}"></script>
-        <script src="{% static 'js/waypoints.min.js' %}"></script>
-        <script src="{% static 'js/contact.js' %}"></script>
-        <!-- <script src="{% static 'js/jquery.ajaxchimp.min.js' %}"></script> -->
-        <script src="{% static 'js/jquery.form.js' %}"></script>
-        <script src="{% static 'js/jquery.validate.min.js' %}"></script>
-        <script src="{% static 'js/mail-script.js' %}"></script>
-        <script src="{% static 'js/custom.js' %}"></script>
-    {% endblock %}
-    {% block jqueryselect %}
     <script type="text/javascript">
-        $('.select_option_dropdown').hide();
-        $(".select_option_list").click(function () {
-        $(this).parent(".select_option").children(".select_option_dropdown").slideToggle('100');
-        $(this).find(".right").toggleClass("fas fa-caret-down, fas fa-caret-up");
-        });
+        $('.toast').toast('show');
     </script>
-    <script src="{% static 'js/jquery.nice-select.min.js' %}"></script> 
     {% endblock %}
 
 </body>
+
 </html>
